--- a/GeekShopping/GeekShopping.OrderAPI/GeekShopping.OrderAPI.csproj
+++ b/GeekShopping/GeekShopping.OrderAPI/GeekShopping.OrderAPI.csproj
@@ -22,7 +22,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\GeekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
+		<ProjectReference Include="..\GeekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Controllers\" />
 	</ItemGroup>
 
 </Project>
